<resources>
    <string name="app_name">FarFiled</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveText">Save</string>
    <string name="cancelText">Cancel</string>
    <string name="nameLabel">Name:</string>
    <string name="synopsisLabel">Synopsis:</string>
    <string name="relationSynopsisToolText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="relationNameToolText">+FiLas (First Lastname)</string>
    <string name="nameEmptyMessage">A relation without a name cannot be saved!</string>
    <string name="couldNotGenerateMessage">Could not populate the list with relations.</string>
    <string name="nowLabel">Now:</string>
    <string name="selfLabel">Self:</string>
    <string name="workLabel">Work:</string>
    <string name="homeLabel">Home:</string>
    <string name="circleLabel">Circle:</string>
    <string name="funLabel">Fun:</string>
    <string name="nowText">Now</string>
    <string name="selfText">Self</string>
    <string name="workText">Work</string>
    <string name="homeText">Home</string>
    <string name="circleText">Circle</string>
    <string name="funText">Fun</string>
    <string name="synopsisText">Synopsis</string>
    <string name="generateRandomText">Add Random Relations</string>
    <string name="addRandomRelationsTitle">Confirm Amount of Random Relations to Add</string>
    <string name="addRandomRelationsOK">OK</string>
    <string name="addRandomRelationsCancel">Cancel</string>
    <string name="deleteText">Delete</string>
</resources>
