<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.RelationDetailFragment">

    <data>
        <variable
            name="relationDetailViewModel"
            type="be.pjvandamme.farfiled.ui.RelationDetailViewModel" />
    </data>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/relationDetailLayoutMargin">

                <TextView
                    android:id="@+id/nameLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nameLabel"
                    app:layout_constraintBottom_toTopOf="@+id/relationNameEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/relationNameEditText"
                    android:layout_width="@dimen/relationNameEditWidth"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/editTextChips"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView"
                    app:relationName="@{relationDetailViewModel.relationEdited}" />

                <ImageView
                    android:id="@+id/avatarImageView"
                    android:layout_width="@dimen/listItemRelationImageSize"
                    android:layout_height="@dimen/listItemRelationImageSize"
                    app:avatarUrl="@{relationDetailViewModel.adorableAvatarString}"
                    app:layout_constraintBottom_toTopOf="@+id/editTextChips"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/relationNameEditText"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/editTextChips"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toTopOf="@+id/lifeAreasLayout"
                    app:layout_constraintTop_toBottomOf="@+id/relationNameEditText"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/synopsisChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/synopsisText" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/nowChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nowText" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/selfChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selfText" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/workChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workText" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/homeChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/homeText" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/circleChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circleText" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/funChip"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/funText" />
                </com.google.android.material.chip.ChipGroup>

                <LinearLayout
                    android:id="@+id/lifeAreasLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/saveButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible">

                    <LinearLayout
                        android:id="@+id/synopsisLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/synopsisLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/synopsisLabel" />

                        <EditText
                            android:id="@+id/relationSynopsisEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationSynopsis="@{relationDetailViewModel.relationEdited}"
                            tools:text="@tools:sample/lorem/random" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/nowLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/lifeAreaNowLabelTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/nowLabel" />

                        <EditText
                            android:id="@+id/lifeAreaNowEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationLifeAreaNow="@{relationDetailViewModel.relationLifeAreasEdited}"
                            tools:text="@tools:sample/lorem/random" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/selfLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/lifeAreaSelfLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/selfLabel" />

                        <EditText
                            android:id="@+id/lifeAreaSelfEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationLifeAreaSelf="@{relationDetailViewModel.relationLifeAreasEdited}"
                            tools:text="@tools:sample/lorem/random" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/workLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/lifeAreaWorkLabelTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/workLabel" />

                        <EditText
                            android:id="@+id/lifeAreaWorkEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationLifeAreaWork="@{relationDetailViewModel.relationLifeAreasEdited}"
                            tools:text="@tools:sample/lorem/random" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/homeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/lifeAreaHomeLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/homeLabel" />

                        <EditText
                            android:id="@+id/lifeAreaHomeEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationLifeAreaHome="@{relationDetailViewModel.relationLifeAreasEdited}"
                            tools:text="@tools:sample/lorem/random" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/circleLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/lifeAreaCircleLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/circleLabel" />

                        <EditText
                            android:id="@+id/lifeAreaCircleEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationLifeAreaCircle="@{relationDetailViewModel.relationLifeAreasEdited}"
                            tools:text="@tools:sample/lorem/random" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/funLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="gone">

                        <TextView
                            android:id="@+id/lifeAreaFunLabelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/funLabel" />

                        <EditText
                            android:id="@+id/lifeAreaFunEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            app:relationLifeAreaFun="@{relationDetailViewModel.relationLifeAreasEdited}"
                            tools:text="@tools:sample/lorem/random" />
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> relationDetailViewModel.onSave()}"
                    android:text="@string/saveText"
                    app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
                    app:layout_constraintEnd_toStartOf="@+id/cancelButton"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lifeAreasLayout" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:onClick="@{() -> relationDetailViewModel.onCancel()}"
                    android:text="@string/cancelText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/saveButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

</layout>